# cuda-ct-pipeline-

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
src/: main.cu
